@@ -40,7 +40,7 @@
 #define __REGINA_FACETSPEC_H
 #endif
 
-#include "regina-core.h"
+#include "utilities/tightencoding.h"
 #include <cstddef>
 #include <iostream>
 #include <sys/types.h> // for ssize_t
@@ -266,6 +266,78 @@ struct FacetSpec {
      * the given specifier.
      */
     bool operator <= (const FacetSpec<dim>& other) const;
+
+    /**
+     * Writes the tight encoding of this specifier to the given output
+     * stream.  See the page on \ref tight "tight encodings" for details.
+     *
+     * Before-the-start, past-the-end and boundary specifiers can all be
+     * safely encoded.
+     *
+     * \ifacespython Not present; use tightEncoding() instead.
+     *
+     * @param out the output stream to which the encoded string will be written.
+     */
+    void tightEncode(std::ostream& out) const;
+
+    /**
+     * Returns the tight encoding of this specifier.
+     * See the page on \ref tight "tight encodings" for details.
+     *
+     * Before-the-start, past-the-end and boundary specifiers can all be
+     * safely encoded.
+     *
+     * @return the resulting encoded string.
+     */
+    std::string tightEncoding() const;
+
+    /**
+     * Reconstructs a specifier from its given tight encoding.
+     * See the page on \ref tight "tight encodings" for details.
+     *
+     * The tight encoding will be given as a string.  If this string
+     * contains leading whitespace or any trailing characters at all
+     * (including trailing whitespace), then it will be treated as
+     * an invalid encoding (i.e., this routine will throw an exception).
+     *
+     * Before-the-start, past-the-end and boundary specifiers can all be
+     * safely reconstructed.
+     *
+     * \exception InvalidArgument the given string is not a tight encoding
+     * of a <i>dim</i>-dimensional facet specifier.
+     *
+     * @param enc the tight encoding for a <i>dim</i>-dimensional
+     * facet specifier.
+     * @return the specifier represented by the given tight encoding.
+     */
+    static FacetSpec<dim> tightDecoding(const std::string& enc);
+
+    /**
+     * Reconstructs a specifier from its given tight encoding.
+     * See the page on \ref tight "tight encodings" for details.
+     *
+     * The tight encoding will be read from the given input stream.
+     * If the input stream contains leading whitespace then it will be
+     * treated as an invalid encoding (i.e., this routine will throw an
+     * exception).  The input routine \e may contain further data: if this
+     * routine is successful then the input stream will be left positioned
+     * immediately after the encoding, without skipping any trailing
+     * whitespace.
+     *
+     * Before-the-start, past-the-end and boundary specifiers can all be
+     * safely reconstructed.
+     *
+     * \exception InvalidInput the given input stream does not begin with
+     * a tight encoding of a <i>dim</i>-dimensional facet specifier.
+     *
+     * \ifacespython Not present, but the string version of this routine
+     * is available.
+     *
+     * @param input an input stream that begins with the tight encoding
+     * for a <i>dim</i>-dimensional facet specifier.
+     * @return the specifier represented by the given tight encoding.
+     */
+    static FacetSpec<dim> tightDecoding(std::istream& input);
 };
 
 /**
@@ -388,6 +460,42 @@ template <int dim>
 inline std::ostream& operator << (std::ostream& out,
         const FacetSpec<dim>& spec) {
     return out << spec.simp << ':' << spec.facet;
+}
+
+template <int dim>
+inline void FacetSpec<dim>::tightEncode(std::ostream& out) const {
+    ssize_t enc = (simp < 0 ? -1 : simp * (dim + 1) + facet);
+    regina::detail::tightEncodeIndex(out, enc);
+}
+
+template <int dim>
+inline std::string FacetSpec<dim>::tightEncoding() const {
+    std::ostringstream out;
+    tightEncode(out);
+    return out.str();
+}
+
+template <int dim>
+inline FacetSpec<dim> FacetSpec<dim>::tightDecoding(const std::string& enc) {
+    std::istringstream s(enc);
+    try {
+        FacetSpec<dim> ans = tightDecoding(s);
+        if (s.get() != EOF)
+            throw InvalidArgument("The tight encoding has trailing characters");
+        return ans;
+    } catch (const InvalidInput& exc) {
+        // For strings we use a different exception type.
+        throw InvalidArgument(exc.what());
+    }
+}
+
+template <int dim>
+inline FacetSpec<dim> FacetSpec<dim>::tightDecoding(std::istream& input) {
+    ssize_t enc = regina::detail::tightDecodingIndex<ssize_t>(input);
+    if (enc < 0)
+        return FacetSpec(-1, dim);
+    else
+        return FacetSpec(enc / (dim + 1), enc % (dim + 1));
 }
 
 } // namespace regina
