@@ -74,6 +74,9 @@ void addFacetPairing(pybind11::module_& m, const char* name) {
         .def("textRep", &FacetPairing<dim>::textRep)
         .def("toTextRep", &FacetPairing<dim>::textRep) // deprecated
         .def_static("fromTextRep", &FacetPairing<dim>::fromTextRep)
+        .def("tightEncoding", &FacetPairing<dim>::tightEncoding)
+        .def_static("tightDecoding", overload_cast<const std::string&>(
+            &FacetPairing<dim>::tightDecoding))
         .def("dot", &FacetPairing<dim>::dot,
             pybind11::arg("prefix") = nullptr,
             pybind11::arg("subgraph") = false,
